cheddar-v2-2/errorFile120-08-2024-19-52-09-1724197929528--1598011148.txt
  File "/u2/e256zhang/climbe-terminal/cheddar-v2-2/algo_strategy.py", line 288
    if self.prev_turn_info == 1 and turn_info = 0:
                                              ^
SyntaxError: invalid syntax
